# rl-slay-the-spire

./: .gitignore  README.md  agent.py  pyproject.toml
rlsts/: train.py  train_combat.py
rlsts/env/: combat_env.py  mod_protocol.py  slay_the_spire_env.py
rlsts/game/: game_status.py  slay_the_spire.py  target.py
rlsts/game/card/: __init__.py  card.py  card_pool.py  deck.py  pile.py
rlsts/game/character/: __init__.py  character.py  ironclad.py
rlsts/game/combat/: __init__.py  act1_boss_combat.py  act1_easy_combat.py  act1_elite_combat.py  act1_hard_combat.py  combat.py  combat_observation.py
rlsts/game/effect/: __init__.py  effect.py
rlsts/game/enemy/: __init__.py  enemy.py
rlsts/game/event/: __init__.py  event.py  event_observation.py  options_event.py
rlsts/game/location/: __init__.py  boss_location.py  elite_location.py  event_location.py  location.py  merchant_location.py  monster_location.py  neow_location.py  rest_site_location.py  treasure_location.py
rlsts/game/map/: __init__.py  map.py
rlsts/game/observation/: __init__.py  choose_card_observation.py  choose_room_observation.py  combat_observation.py  event_observation.py  merchant_observation.py  modify_deck_observation.py
rlsts/game/relic/: __init__.py  relic.py
rlsts/module/: choose_card_module.py  combat_module.py  slay_the_spire_module.py
rlsts/utils/: collection.py  random.py  random_pool.py
tests/: test_card_pool.py  test_combat.py  test_combat_random_action.py  test_env.py  test_game.py  test_log.py  test_map.py  test_model.py  test_random_action.py
(+206 files in other folders)
