[tool.poetry]
name = "rlsts"
version = "0.1.0"
description = "Train an agent for Slay the Spire using reinforcement learning."
authors = ["euxcet <zcc.qwer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.6.0"
ray = {extras = ["rllib"], version = "^2.43.0"}
pytest = "^8.3.5"
rich = "^13.9.4"
pillow = "^11.1.0"
pydash = "^8.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[tool.poetry.scripts]
train = "rlsts.train:train"
